--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "decentralized-learning-backend",
-    "version": "1.0.0",
-    "main": "src/index.js",
-    "scripts": {
-      "start": "node src/index.js"
-    },
-    "dependencies": {
-      "express": "^4.17.1"
-    }
+  "name": "decentralized-learning-backend",
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
   }
-  
+}
